GNOME Bugzilla – Bug 750888
Fix return value error in _gtk_text_handle_set_direction
Last modified: 2015-06-13 15:05:04 UTC
Please see the patch. This fixes error when compiling with clang. gtktexthandle.c:839:3: error: void function '_gtk_text_handle_set_direction' should not return a value [-Wreturn-type]
Created attachment 305187 [details] [review] Fix return value error in _gtk_text_handle_set_direction
Created attachment 305188 [details] [review] Fix 'void function should not return void expression' warning for clang This patch fixes another unrelated return error warning. I hope it can also be pushed.
Review of attachment 305187 [details] [review]: sure
Review of attachment 305188 [details] [review]: ok
Attachment 305187 [details] pushed as d8657a8 - Fix return value error in _gtk_text_handle_set_direction Attachment 305188 [details] pushed as 41b6993 - Fix 'void function should not return void expression' warning for clang