Fix return value error in _gtk_text_handle_set_direction

https://bugzilla.gnome.org/show_bug.cgi?id=750888